--- a/blogapp/views/layouts/main.handlebars
+++ b/blogapp/views/layouts/main.handlebars
@@ -8,7 +8,9 @@
 </head>
 <body>
     {{>_navbar}}
-    {{{body}}}
+    <div class="container mt-4">
+        {{{body}}}
+    </div>
     <script src="/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
