--- a/blogapp/views/admin/categorias.handlebars
+++ b/blogapp/views/admin/categorias.handlebars
@@ -7,8 +7,14 @@
         <div class="card-body">
             <h4>{{name}}</h4>
             <small>{{slug}}</small>
+            <br>
+            <a href="/admin/categorias/edit/{{_id}}"><button class="btn btn-success mt-4">Editar Categoria</button></a>
+            <form action="/admin/categorias/deletar" method="POST">
+                    <input type="hidden" name="id" value="{{_id}}">
+                    <button type="submit" class="btn btn-danger mt-2">Deletar Categoria</button>
+            </form>
         </div>
     </div>
 {{else}}
-
+    <h4 class="mt-3">Nenhuma Categoria registrada!</h4>
 {{/each}}
