--- a/blogapp/views/index.handlebars
+++ b/blogapp/views/index.handlebars
@@ -1,10 +1,10 @@
 <div class="jumbotron">
   <h1 class="display-4">Bem vindo ao Blog do Node!</h1>
-  <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+  <p class="lead">Esse é um blog simples, desenvolvido com Node.js + Express + MongoDB</p>
   <hr class="my-4">
-  <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+  <p>Aqui você vai ler sobre as atualizações mundiais.</p>
   <p class="lead">
-    <a class="btn btn-primary btn-lg" href="#" role="button">Crie uma conta</a>
+    <a class="btn btn-primary btn-lg" href="/usuarios/registro" role="button">Crie uma conta</a>
   </p>
 </div>
 
@@ -17,6 +17,11 @@
         <div class="card-body">
             <h3>{{titulo}}</h3>
             <p>{{descricao}}</p>
+            <a href="/postagens/{{slug}}"><button class="btn btn-success">Leia mais</button></a>
+            <hr>
+            <small>Categoria: {{categorias.name}}</small>
+            <br>
+            <small>Data de publicação: {{data}}</small>
         </div>
     </div>
 {{else}}
