--- a/blogapp/views/layouts/main.handlebars
+++ b/blogapp/views/layouts/main.handlebars
@@ -9,6 +9,11 @@
 <body>
     {{>_navbar}}
     <div class="container mt-4">
+        {{#if error}}
+            <div class="alert alert-danger">{{this.error}}</div>
+        {{else}}
+
+        {{/if}}
         {{>_msg}}
         {{{body}}}
     </div>
