--- a/blogapp/views/partials/_navbar.handlebars
+++ b/blogapp/views/partials/_navbar.handlebars
@@ -12,12 +12,18 @@
         <li class="nav-item">
           <a class="nav-link active" href="/categorias">Categorias</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link active" href="/usuarios/login">Login</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active" href="/usuarios/registro">Registro</a>
-        </li>
+        {{#if user}}
+          <li class="nav-item">
+            <a class="nav-link active" href="/usuarios/logout">Sair</a>
+          </li>
+        {{else}}
+          <li class="nav-item">
+            <a class="nav-link active" href="/usuarios/login">Login</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="/usuarios/registro">Registro</a>
+          </li>
+        {{/if}}
       </ul>
     </div>
   </div>
